--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 <body>
 
     <main>
-        <h1 class="logo">VidRock</h1>
-        <p class="tagline">Instantly stream any movie by its TMDB ID.</p>
+        <h1 class="logo">Cookies Movies!</h1>
+        <p class="tagline">Instantly stream any movie by its TMDB ID, we recommend using AdGuard since the player has many popups and ads.</p>
         
         <div class="search-container">
             <input type="number" id="tmdbId" placeholder="Enter TMDB ID (e.g., 550)" aria-label="TMDB ID">
